--- a/styles/style.css
+++ b/styles/style.css
@@ -4,3 +4,49 @@
   font-optical-sizing: auto;
   font-style: normal;
 }
+
+/* shared styles */
+.display-flex{
+    display: flex;
+}
+ /*  dark 02 */
+.text-gray{
+    color: #424242;
+}
+
+.text-light-gray{
+    color: #727272 ;
+}
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.1)
+}
+
+
+
+/* header styles */
+
+/* navbar relared styles */
+
+.navbar{
+    justify-content: space-between;
+}
+
+.nav-links{
+    
+}
+
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+}
+
+.nav-link{
+    text-decoration: none;
+    font-weight: 500;
+     
+}
+
+.navbar, .banner{
+    max-width: 1440px;
+    margin: 0 auto;
+}
