--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,15 @@
     background-color: rgba(255, 144, 14, 0.1)
 }
 
+.btn-primary{
+    background-color: #FF900E;
+    color: white;
+    border: none;
+    font-size: 1.25rem;
+    border-radius: 8px;
+    padding: 20px 25px;
+    font-weight: 600;
+}
 
 
 /* header styles */
@@ -29,10 +38,16 @@
 
 .navbar{
     justify-content: space-between;
+    align-items: center;
 }
 
 .nav-links{
     
+}
+
+.brand{
+    font-weight: 700;
+    font-size: 2.8em;
 }
 
 .nav-item{
@@ -49,4 +64,30 @@
 .navbar, .banner{
     max-width: 1440px;
     margin: 0 auto;
+}
+
+/* banner related style*/
+
+.banner-content{
+    max-width: 850px;
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 50px;
+    
+}
+
+.banner-title{
+    font-weight: 700;
+    font-size: 4rem;
+}
+
+.banner-image{
+    width: 100%;
+}
+
+/* responsive media query */
+@media screen and (max-width:576px){
+        .navbar, .nav-links{
+            flex-direction: column;
+        }
 }
