--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,10 @@
     background-color: rgba(255, 144, 14, 0.1)
 }
 
+.bg-orange{
+    color: #FF900E;
+}
+
 .btn-primary{
     background-color: #FF900E;
     color: white;
@@ -29,6 +33,18 @@
     border-radius: 8px;
     padding: 20px 25px;
     font-weight: 600;
+}
+
+
+
+
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+main > section{
+    margin-top: 130px;
 }
 
 
@@ -84,6 +100,32 @@
 .banner-image{
     width: 100%;
 }
+
+/* team and feature realated styles */
+.teams{
+    align-items: center;
+}
+
+.team-img-container{
+    grid-template-columns:repeat(2,1fr) ;
+    gap: 24px;
+    
+}
+
+.our-features{
+    margin-left: 73px;
+    max-width: 530px;
+}
+
+.feature-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+#Quick-list{
+    font-weight: 500;
+}
+
+
 
 /* responsive media query */
 @media screen and (max-width:576px){
