--- a/styles/style.css
+++ b/styles/style.css
@@ -48,6 +48,12 @@ main > section{
 }
 
 
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+}
+
+
 /* header styles */
 
 /* navbar relared styles */
@@ -117,10 +123,7 @@ main > section{
     max-width: 530px;
 }
 
-.feature-title{
-    font-size: 2.8rem;
-    font-weight: 700;
-}
+
 #Quick-list{
     font-weight: 500;
 }
@@ -129,7 +132,29 @@ main > section{
 
 /* responsive media query */
 @media screen and (max-width:576px){
-        .navbar, .nav-links{
+        .navbar, 
+        .nav-links,
+        .teams{
             flex-direction: column;
         }
+        .team-img-container{
+            grid-template-columns:repeat(1,1fr);
+        }
+        .our-features{
+            margin-left: 20px;
+        }
+}
+
+
+/* medium size device */
+
+@media screen and (min-width: 576px) and ( max-width: 992px) { 
+    .teams{
+            flex-direction: column;
+    }
+    .our-features{
+            margin-left: 50px;
+            text-align: center;
+        }
+    
 }
